daylight-equation/fixtures/daylight-v06-m1/vectors/negative/N16_insufficient_q_threshold/auth_block.cbor.hex
a30081a200584011f3322ad775dd273a9f9325e571dc4a568c5e4f84b045f9c4bf5b1166111c283b7fe04f5a351da6b669c550a187493963ea136efeeeafaa95f8bbe28d263ae301584023f5ef3d4db577ca70c22a6c193e0763eb919d09a7884c2e39507d012fcf16d7e5579e1a5aa9edcf789125dbb942ed6df37e6f6ca5adb48d4ed1d710fc72036c01f602f6
